--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,8 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
     <android.support.v7.widget.RecyclerView
-            android:layout_width="407dp"
-            android:layout_height="508dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/rv_main"
-            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"/>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/rv_main"
+            tools:layout_editor_absoluteY="16dp" tools:layout_editor_absoluteX="5dp"/>
 </android.support.constraint.ConstraintLayout>
