--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -1,28 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:layout_height="wrap_content">
+                                             android:layout_height="wrap_content"
+
+                                             >
 
     <TextView
             android:text="TextView"
-            android:layout_width="262dp"
-            android:layout_height="109dp"
+            android:layout_width="260dp"
+            android:layout_height="65dp"
             android:id="@+id/tv_note" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="24sp"/>
+            android:textSize="24sp" android:layout_marginBottom="8dp"
+            />
     <View
             android:id="@+id/divider"
             android:layout_width="0dp"
             android:layout_height="1dp"
             android:background="?android:attr/listDivider"
-            app:layout_constraintTop_toBottomOf="@+id/tv_note"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"/>
+            app:layout_constraintHorizontal_bias="0.0" tools:layout_editor_absoluteY="38dp"/>
     <ImageView
-            android:layout_width="127dp"
-            android:layout_height="110dp" tools:srcCompat="@tools:sample/avatars"
+            android:layout_width="145dp"
+            android:layout_height="65dp" tools:srcCompat="@tools:sample/avatars"
             android:id="@+id/tv_img" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/tv_note" android:layout_marginEnd="6dp"/>
-</android.support.constraint.ConstraintLayout>
+            app:layout_constraintEnd_toStartOf="@+id/tv_note" android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            />
+</LinearLayout>
